# CompOrgProject

./: CMakeLists.txt  Cache.c  Cache.h  EX.c  EX.h  Hazard.c  Hazard.h  ID.c  ID.h  IF.c  IF.h  Load_Program.c  Load_Program.h  MEM.c  MEM.h  Shadow_to_Pipeline.c  Shadow_to_Pipeline.h  WB.c  WB.h  a.out  clock_cycle.c  clock_cycle.h  datamemory.c  datamemory.h  main.c  main.h  register.c  register.h
